k8s/profile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edumatch-profile-deployment
  namespace: edumatch
  labels:
    app: edumatch-profile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: edumatch-profile
  template:
    metadata:
      labels:
        app: edumatch-profile
    spec:
      nodeSelector:
        kubernetes.io/hostname: profile
      containers:
        - name: edumatch-profile
          image: registry.edumatch.space/edumatch/profile-k8s:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: edumatch-secret
      volumes:
        - name: profile-config-volume

---
apiVersion: v1
kind: Service
metadata:
  name: edumatch-profile-service
  namespace: edumatch
spec:
  selector:
    app: edumatch-profile
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edumatch-profile-ingress
  namespace: edumatch
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /profile
            pathType: Prefix
            backend:
              service:
                name: edumatch-profile-service
                port:
                  number: 80
